@feat: post finished

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -81,7 +81,7 @@
           }
 
           img {
-            padding: 5px;
+            padding: 0px 0 6px 0;
             cursor: pointer;
             transition: 0.15s;
             box-shadow: none;
