--- a/src/styles/pages/_profil.scss
+++ b/src/styles/pages/_profil.scss
@@ -224,7 +224,7 @@
       }
       h5 {
         background: $color-1;
-        color: $color-4;
+        color: #B0B0F3;
         font-family: $font-1;
         margin: 20px 0;
         padding: 12px;
