create public page + maj home

--- a/src/styles/components/_friendsHint.scss
+++ b/src/styles/components/_friendsHint.scss
@@ -1,6 +1,6 @@
 .get-friends-container {
   width: 356px;
-  background: linear-gradient(145deg, $color-2 30%, #ffe1d9 100%);
+  background: $color-4;
   border-radius: 20px;
   padding: 20px 20px 10px;
 
@@ -44,7 +44,7 @@
 
         button {
           background: $color-1;
-          color: $color-4;
+          color: #B0B0F3;
           padding: 10px 24px 8px;
           transition: 0.2s;
           border-radius: 20px;
