--- a/src/styles/components/_newPostForm.scss
+++ b/src/styles/components/_newPostForm.scss
@@ -161,6 +161,9 @@
         color: red;
       }
       .btn-send {
+        display:flex;
+        justify-content: space-between;
+
         .cancel {
           border-radius: 20px;
           margin-right: 8px;
@@ -184,5 +187,74 @@
         }
       }
     }
+  }
+}
+
+/* CSS pour le bouton toggle switch */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 50%;
+}
+
+input:checked+.slider {
+  background-color: $color-2;
+}
+
+input:checked+.slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Style du bouton de forme ronde */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.visibility-toggle{
+  display: flex;
+  margin-right: 10px;
+  align-items: center;
+
+  .text{
+    margin: 10px;
   }
 }
