--- a/src/styles/components/_trends.scss
+++ b/src/styles/components/_trends.scss
@@ -61,3 +61,13 @@
     }
   }
 }
+
+.no-posts-message{
+  background-color: $color-4;
+  color: $color-3;
+  border-radius: 20px;
+  padding: 20px;
+  font-size: 1.2rem;
+  text-align: center;
+  margin-top: 20px;
+}
